.k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./../docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./../docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: api
    spec:
      containers:
      - image: killmeapi
        imagePullPolicy: "Never"
        name: api
        ports:
        - containerPort: 3001
        resources: {}
        volumeMounts:
        - mountPath: /api/src
          name: api-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: api-claim0
        persistentVolumeClaim:
          claimName: api-claim0
status: {}
