.k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./../docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./../docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/shared: "true"
        io.kompose.service: client
    spec:
      containers:
      - image: client
        imagePullPolicy: ""
        name: client
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /client/src
          name: client-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: client-claim0
        persistentVolumeClaim:
          claimName: client-claim0
status: {}
