.k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: local.docker.test
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: client
          servicePort: 5000
      - path: /api/?(.*)
        backend:
          serviceName: api
          servicePort: 3001
